--- a/image to text.ipynb
+++ b/image to text.ipynb
@@ -136,9 +136,170 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "cb35fc90",
+   "metadata": {},
+   "source": [
+    "## Loading .docx"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "661a4b23",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting python-docx\n",
+      "  Downloading python_docx-1.2.0-py3-none-any.whl.metadata (2.0 kB)\n",
+      "Requirement already satisfied: lxml>=3.1.0 in c:\\users\\gaura\\appdata\\local\\anaconda3\\lib\\site-packages (from python-docx) (5.3.0)\n",
+      "Requirement already satisfied: typing_extensions>=4.9.0 in c:\\users\\gaura\\appdata\\local\\anaconda3\\lib\\site-packages (from python-docx) (4.12.2)\n",
+      "Downloading python_docx-1.2.0-py3-none-any.whl (252 kB)\n",
+      "Installing collected packages: python-docx\n",
+      "Successfully installed python-docx-1.2.0\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    }
+   ],
+   "source": [
+    "pip install python-docx"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "07ea6a2e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from docx import Document"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9e1db50f",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "fda5aa07",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "📘 1. One-Hot Encoding (OHE)\n",
+      "✅ Concept:\n",
+      "Each word is represented as a binary vector the length of the vocabulary.\n",
+      "\n",
+      "Each sentence is represented as a list of word vectors.\n",
+      "\n",
+      "Position of 1 in the vector represents the index of the word in the vocabulary.\n",
+      "\n",
+      "🧠 Think of it like:\n",
+      "Vocabulary: ['A', 'man', 'eat', 'food', 'cat', 'fish', 'and', 'are', 'friends']\n",
+      "\n",
+      "Word 'cat' → One-hot vector: [0, 0, 0, 0, 1, 0, 0, 0, 0]\n",
+      "\n",
+      "📘 1. Bag of Words (BoW)\n",
+      "✅ Concept:\n",
+      "Build a vocabulary of all unique words in the corpus.\n",
+      "\n",
+      "Each sentence is represented as a vector, with counts of how many times each word from the vocabulary appears.\n",
+      "\n",
+      "✏️ Step-by-Step:\n",
+      "Corpus: 3 sentences\n",
+      "\n",
+      "Unique words: 'A', 'man', 'eat', 'food', 'cat', 'fish', 'and', 'are', 'friends'\n",
+      "\n",
+      "Vocabulary size = 9\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "🧠 What is an N-gram?\n",
+      "An n-gram is a sequence of \"n\" words from a given sentence or text.\n",
+      "Unigram (n=1): single word\n",
+      "\n",
+      "Bigram (n=2): pair of consecutive words\n",
+      "\n",
+      "Trigram (n=3): sequence of three consecutive words\n",
+      "\n",
+      "and so on…\n",
+      "❓ Why Use N-grams?\n",
+      "Natural language isn't just about words — it's about word combinations and context. N-grams help capture this.\n",
+      "✅ Benefits:\n",
+      "\n",
+      "📌 Real-World Analogy (Computer-Related)\n",
+      "Think of a program log:\n",
+      "A single log line tells you what happened (unigram).\n",
+      "\n",
+      "But two or three consecutive lines together might tell you why it happened (bigram/trigram).\n",
+      "\n",
+      "Likewise, in text, just the word “not” or “good” means less than “not good” together.\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "📘 What is TF-IDF?\n",
+      "TF-IDF stands for:\n",
+      "Term Frequency – Inverse Document Frequency\n",
+      "It is a numerical statistic used to weight words in documents.\n",
+      "Unlike BoW which counts words equally, TF-IDF penalizes common words and rewards rare but important words.\n",
+      "\n",
+      "🎯 Purpose of TF-IDF\n",
+      "💡 Example:\n",
+      "The word \"the\" appears in almost every document → not important.\n",
+      "\n",
+      "The word \"fraud\" appears rarely but may indicate spam → important.\n",
+      "\n",
+      "TF-IDF helps models focus on words that really differentiate documents.\n",
+      "\n",
+      "🧠 TF-IDF = TF × IDF\n",
+      "1. TF: Term Frequency\n",
+      "Measures how often a word appears in a document.\n",
+      "TF(t,d)=count of t in dtotal words in d\\text{TF}(t, d) = \\frac{\\text{count of } t \\text{ in } d}{\\text{total words in } d}TF(t,d)=total words in dcount of t in d​\n",
+      "2. IDF: Inverse Document Frequency\n",
+      "Measures how unique or rare a word is across all documents.\n",
+      "IDF(t)=log⁡(N1+df(t))\\text{IDF}(t) = \\log\\left(\\frac{N}{1 + \\text{df}(t)}\\right)IDF(t)=log(1+df(t)N​)\n",
+      "NNN: total number of documents\n",
+      "\n",
+      "df(t)\\text{df}(t)df(t): number of documents containing the word ttt\n",
+      "\n",
+      "3. TF-IDF Score\n",
+      "TF-IDF(t,d)=TF(t,d)×IDF(t)\\text{TF-IDF}(t, d) = \\text{TF}(t, d) \\times \\text{IDF}(t)TF-IDF(t,d)=TF(t,d)×IDF(t)\n",
+      "\n",
+      "\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "doc = Document(\"Word Vectorization.docx\")\n",
+    "text = \"\\n\".join([p.text for p in doc.paragraphs])\n",
+    "print(text)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cb35fc90",
+   "id": "06bb8653",
    "metadata": {},
    "outputs": [],
    "source": []
